<resources>
    <string name="app_name">PocketSoccer</string>
    <string name="pocket_soccer">Pocket Soccer</string>
    <string name="new_game">NEW</string>
    <string name="resume_game">RESUME</string>
    <string name="stats">STATS</string>
    <string name="settings">SETTINGS</string>
    <string name="field">FIELD</string>
    <string name="match">MATCH</string>
    <string name="speed">SPEED</string>
    <string name="reset_default">RESET</string>
    <string name="reset_defaults">RESET ALL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="end_of_match">END OF MATCH</string>
    <string name="time">TIME</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="statistics">STATISTICS</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="semicolon">:</string>
    <string name="clear_scores">CLEAR</string>
    <string name="score">SCORE</string>
    <string name="choose">CHOOSE</string>
    <string name="player_1">PLAYER 1</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="player_2">PLAYER 2</string>
    <string name="play">PLAY</string>
    <string name="checkbox">checkbox</string>
    <string name="computer">computer</string>
</resources>
