<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.settings.SettingsActivity">

    <ImageView
        android:id="@+id/settings_back"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/reset_settings"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_defaults"
        android:textSize="@dimen/smallText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/subtitle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/settings_title"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/subtitleText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/subtitle_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/menu_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/field"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field"
        android:textSize="@dimen/menuText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/match"
        app:layout_constraintTop_toTopOf="@id/menu_guideline" />

    <TextView
        android:id="@+id/match"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match"
        android:textSize="@dimen/menuText"
        app:layout_constraintLeft_toRightOf="@id/field"
        app:layout_constraintRight_toLeftOf="@id/speed"
        app:layout_constraintTop_toTopOf="@id/menu_guideline" />

    <TextView
        android:id="@+id/speed"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textSize="@dimen/menuText"
        app:layout_constraintLeft_toRightOf="@id/match"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_guideline" />

</android.support.constraint.ConstraintLayout>