<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.settings.SettingsActivity">

    <ImageView
        android:id="@+id/match_back"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_match"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_default"
        android:textSize="@dimen/smallText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/subtitle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/match_title"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_of_match"
        android:textSize="@dimen/subtitleText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/subtitle_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/menu_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/options_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/time_title"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="@dimen/menuText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/or_title"
        app:layout_constraintTop_toTopOf="@id/menu_guideline" />

    <TextView
        android:id="@+id/time_1"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1:00"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/time_3"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

    <TextView
        android:id="@+id/time_3"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3:00"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toRightOf="@id/time_1"
        app:layout_constraintRight_toLeftOf="@id/time_5"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

    <TextView
        android:id="@+id/time_5"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toRightOf="@id/time_3"
        app:layout_constraintRight_toLeftOf="@id/or_title"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

    <TextView
        android:id="@+id/or_title"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textSize="@dimen/menuText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_guideline" />

    <TextView
        android:id="@+id/goals_title"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GOALS"
        android:textSize="@dimen/menuText"
        app:layout_constraintLeft_toRightOf="@id/or_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_guideline" />

    <TextView
        android:id="@+id/goals_1"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toRightOf="@id/or_title"
        app:layout_constraintRight_toLeftOf="@id/goals_3"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

    <TextView
        android:id="@+id/goals_3"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toRightOf="@id/goals_1"
        app:layout_constraintRight_toLeftOf="@id/goals_5"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

    <TextView
        android:id="@+id/goals_5"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toRightOf="@id/goals_3"
        app:layout_constraintRight_toLeftOf="@id/goals_10"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

    <TextView
        android:id="@+id/goals_10"
        style="@style/shadoweffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="@dimen/optionsText"
        app:layout_constraintLeft_toRightOf="@id/goals_5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/options_guideline" />

</android.support.constraint.ConstraintLayout>